--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.image {
+  width:200px;
+  
+ 
+}
+
+h1{
+  color:green;
+}
+
+.photo {
+  border:1px solid red;
+}
