--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,12 @@
 <h1>Home#index</h1>
-<p><%=Date.today%></p>
-<p><%=Time.now%></p>
+<p><%=@today%></p>
+<p><%=@now%></p>
+
+<%@photos.each do |photo|%>
+  <div class = "photo">
+    <a href= "<%=photo_path(photo.id)%>"> <%=photo.name%></a>
+   </div>
+<%end%>
+
+
+
